init : .gitignore 추가 * .idea 관련 몇몇 파일 제외 설정 추가

--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,9 @@
 
 # User-specific stuff
 .idea/**/workspace.xml
+.idea/**/*.xml
 .idea/**/tasks.xml
+.idea/**/modules/
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
