--- a/.gitignore
+++ b/.gitignore
@@ -219,4 +219,4 @@ gradle-app.setting
 
 # End of https://www.toptal.com/developers/gitignore/api/java,intellij,gradle,macos,git
 
-*.env
+prography-crawler/.env
