--- a/.gitignore
+++ b/.gitignore
@@ -218,3 +218,5 @@ gradle-app.setting
 *.hprof
 
 # End of https://www.toptal.com/developers/gitignore/api/java,intellij,gradle,macos,git
+
+**/.env
