--- a/prography-bff/src/main/resources/application.yml
+++ b/prography-bff/src/main/resources/application.yml
@@ -1,2 +1,24 @@
 server:
   port: 8080
+
+spring:
+  config:
+    import: optional:file:./prography-bff/.env[.properties]
+
+  data:
+    mongodb:
+      uri: ${MONGO_URI}
+
+  jackson:
+    property-naming-strategy: SNAKE_CASE
+
+  datasource:
+    url: ${SPRING_DATASOURCE_URL}
+    username: ${SPRING_DATASOURCE_USERNAME}
+    password: ${SPRING_DATASOURCE_PASSWORD}
+    driver-class-name: org.postgresql.Driver
+
+  jpa:
+    open-in-view: true
+    hibernate:
+      ddl-auto: create
