refactor : Elasticsearch Java-Client 방식으로 변경 * 추후 좀더 세밀한 쿼리 및 기능을 위해서 SpringData 방식이 아닌 Java-Client 방식으로 교체

--- a/prography-search/src/main/resources/application.yml
+++ b/prography-search/src/main/resources/application.yml
@@ -8,5 +8,5 @@ spring:
       host: ${ELASTICSEARCH_HOST:localhost}
       port: ${ELASTICSEARCH_PORT:9200}
       repositories:
-        enabled: true
+        enabled: false
 
